--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "placzek.kamil@gmail.com",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "1.0.0-beta.3"
+    "angular-ui-router": "1.0.0-beta.3",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
