--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "placzek.kamil@gmail.com",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.6.2",
     "angular-ui-router": "1.0.0-beta.3",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7"
