--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run server",
-    "server": "webpack-dev-server --history-api-fallback --inline --progress"
+    "server": "webpack-dev-server --host 192.168.0.24 --history-api-fallback --inline --progress"
   },
   "repository": {
     "type": "git",
@@ -31,20 +31,16 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
-    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
-    "json-loader": "^0.5.3",
     "ng-annotate-loader": "0.0.10",
     "node-sass": "^3.4.2",
-    "null-loader": "0.1.1",
     "postcss-loader": "^1.1.0",
     "raw-loader": "0.5.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
     "webpack": "2.2.0",
     "webpack-dev-server": "2.2.0"
   },
