--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run server",
-    "server": "webpack-dev-server --host 192.168.0.24 --history-api-fallback --inline --progress"
+    "server": "webpack-dev-server --history-api-fallback --inline --progress"
   },
   "repository": {
     "type": "git",
